--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,22 +32,26 @@
                                 <th>ID</th>
                                 <th>Description</th>
                                 <th>View</th>
+                                <th>Update</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
                                 <td th:text="${recipe.id}">123</td>
                                 <td th:text="${recipe.description}">Row 1</td>
                                 <td><a href="#">View</a> </td>
+                                <td><a href="#">Update</a> </td>
                             </tr>
                             <tr th:remove="all">
                                 <td th:text="${recipe.id}">456</td>
                                 <td th:text="${recipe.description}">Row 2</td>
                                 <td><a href="#">View</a> </td>
+                                <td><a href="#">Update</a> </td>
                             </tr>
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">789</td>
                                 <td th:text="${recipe.description}">Row 3</td>
                                 <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a> </td>
                             </tr>
                         </table>
                     </div>
