--- a/src/main/resources/templates/recipe/ingredients/show.html
+++ b/src/main/resources/templates/recipe/ingredients/show.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Recipe Home</title>
+    <meta charset="UTF-8">
+    <title>Show ingredient</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -16,42 +16,46 @@
 </head>
 <body>
 
-<div class="container-fluid" style="margin-top: 20px">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-6">
             <div class="card">
-
                 <div class="card-header">
-                    <h1 class="card-header-pills">My recipes</h1>
+                    <h1 class="card-title">Ingredients</h1>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+                    <div class="table-responsive">
                         <table class="table table-hover">
-                            <thead class="card-title">
+                            <thead> <!--thead-inverse class -->>
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
                                 <th>View</th>
                                 <th>Update</th>
+                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Row 1</td>
+                                <td>123</td>
+                                <td>Tasty 1</td>
                                 <td><a href="#">View</a> </td>
-                                <td><a href="#">Update</a> </td>
+                                <td><a href="#">Update</a></td>
+                                <td><a href="#">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">456</td>
-                                <td th:text="${recipe.description}">Row 2</td>
+                                <td>456</td>
+                                <td>Tasty 2</td>
                                 <td><a href="#">View</a> </td>
-                                <td><a href="#">Update</a> </td>
+                                <td><a href="#">Update</a></td>
+                                <td><a href="#">Delete</a></td>
                             </tr>
-                            <tr th:each="recipe : ${recipes}">
-                                <td th:text="${recipe.id}">789</td>
-                                <td th:text="${recipe.description}">Row 3</td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a> </td>
+                            <tr>
+                                <td th:text="${ingredient.id}">789</td>
+                                <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} +
+                                ' ' + ${ingredient.description}">Tasty 3</td>
+<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/show'}">View</a> </td>-->
+<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/update'}">Update</a></td>-->
+<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/delete'}">Delete</a></td>-->
                             </tr>
                         </table>
                     </div>
@@ -60,17 +64,6 @@
         </div>
     </div>
 </div>
-
-<!--<table>-->
-<!--    <tr>-->
-<!--        <th>ID</th>-->
-<!--        <th>Description</th>-->
-<!--    </tr>-->
-<!--    <tr th:each="recipe : ${recipes}">-->
-<!--        <td th:text="${recipe.id}"></td>-->
-<!--        <td th:text="${recipe.description}"></td>-->
-<!--    </tr>-->
-<!--</table>-->
 
 </body>
 </html>
