Add way to change recipe ingredients

--- a/src/main/resources/templates/recipe/ingredients/show.html
+++ b/src/main/resources/templates/recipe/ingredients/show.html
@@ -63,6 +63,7 @@
             </div>
         </div>
     </div>
+    <a th:href="@{'/recipe/' + ${recipeId} + '/ingredients/'}">Back to recipe ingredients</a>
 </div>
 
 </body>
