--- a/src/main/resources/templates/recipe/ingredients/list.html
+++ b/src/main/resources/templates/recipe/ingredients/list.html
@@ -18,10 +18,17 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h1 class="card-title">Ingredients</h1>
+                    <div class="row">
+                        <div class="col-md-11">
+                            <h1 class="card-title">Ingredients</h1>
+                        </div>
+                        <div class="col-md-1">
+                            <a class="btn btn-primary" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/new'}">New</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
