--- a/src/main/resources/templates/recipe/ingredients/show.html
+++ b/src/main/resources/templates/recipe/ingredients/show.html
@@ -18,7 +18,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 offset-md-3">
             <div class="card">
                 <div class="card-header">
                     <h1 class="card-title">Ingredients</h1>
@@ -30,32 +30,20 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>View</th>
-                                <th>Update</th>
-                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
                                 <td>123</td>
                                 <td>Tasty 1</td>
-                                <td><a href="#">View</a> </td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td>456</td>
                                 <td>Tasty 2</td>
-                                <td><a href="#">View</a> </td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
                             </tr>
                             <tr>
                                 <td th:text="${ingredient.id}">789</td>
                                 <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} +
                                 ' ' + ${ingredient.description}">Tasty 3</td>
-<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/show'}">View</a> </td>-->
-<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/update'}">Update</a></td>-->
-<!--                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + 'ingredients/' + ${ingredient.id} + '/delete'}">Delete</a></td>-->
                             </tr>
                         </table>
                     </div>
