--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -21,7 +21,7 @@
         <div class="col-md-6 offset-md-3">
             <form th:object="${recipe}" th:action="@{/recipe}" method="post">
                 <input type="hidden" th:field="*{id}"/>
-                <div class="card-group flex-column">
+<!--                <div class="card-group flex-column">-->
                     <div class="card">
                         <div class="card-header">
                             <h1 class="card-title">Edit recipe information</h1>
@@ -117,7 +117,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel-body">
+                        <div class="card-body">
                             <div class="row">
                                 <div class="col-md-12">
                                     <ul>
@@ -138,7 +138,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <label class="col-md-12">
-                                    <textarea class="form-control" rows="5" th:field="*{directions}"></textarea>
+                                    <textarea class="form-control" rows="4" th:field="*{directions}"></textarea>
                                 </label>
                             </div>
                         </div>
@@ -150,12 +150,12 @@
                         <div class="card-body">
                             <div class="row">
                                 <label class="col-md-12">
-                                    <textarea class="form-control" rows="5" th:field="*{notes.recipeNotes}"></textarea>
+                                    <textarea class="form-control" rows="4" th:field="*{notes.recipeNotes}"></textarea>
                                 </label>
                             </div>
                         </div>
                     </div>
-                </div>
+<!--                </div>-->
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
